--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1,6 +1,6 @@
 :root {
   --yellow: #FAD722;
-  --blue: rgba(89,195, 255, 1);
+  --blue: rgba(89, 195, 255, 1);
   --purple: #9759EE;
   --red: #EE5959;
   --white: #FFF;
@@ -8,6 +8,12 @@
   --grey: #AFAFAF;
   --black: #3A3A3A;
   --black-50: rgba(58, 58, 58, .5);
+  --border-width: 2px;
+  --border-radius: 8px;
+  --fs-hero: 2.25rem;
+  --fs-lead: 1.375rem;
+  --fs: 1rem;
+  --fs-tiny: 0.875rem;
 }
 
 /**
@@ -27,26 +33,31 @@ html {
   overflow: hidden;
   overflow-y: auto;
 }
+
 @media (min-width: 500px) {
   html {
     font-size: 17px;
   }
 }
+
 @media (min-width: 700px) {
   html {
     font-size: 18px;
   }
 }
+
 @media (min-width: 800px) {
   html {
     font-size: 19px;
   }
 }
+
 @media (min-width: 1000px) {
   html {
     font-size: 20px;
   }
 }
+
 @media (min-width: 1200px) {
   html {
     font-size: 21px;
@@ -59,9 +70,11 @@ body {
   font-family: Inter, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
   color: var(--black);
 }
+
 body.dark {
   background: #111;
 }
+
 @media (prefers-color-scheme: dark) {
   body {
     background: #111;
@@ -75,10 +88,13 @@ a {
   border-color: transparent;
   transition: 0.1s ease;
 }
-a:hover, a:focus {
+
+a:hover,
+a:focus {
   border-color: var(--yellow);
   outline: none;
 }
+
 a:active {
   border-color: var(--blue);
 }
@@ -107,68 +123,86 @@ sup {
   from {
     transform: rotate(0deg);
   }
+
   to {
     transform: rotate(360deg);
   }
 }
+
 @keyframes spin {
   from {
     transform: rotate(0deg);
   }
+
   to {
     transform: rotate(360deg);
   }
 }
+
 @-webkit-keyframes gradient {
   0% {
     background-position: 0% 50%;
   }
+
   50% {
     background-position: 100% 50%;
   }
+
   100% {
     background-position: 0% 50%;
   }
 }
+
 @keyframes gradient {
   0% {
     background-position: 0% 50%;
   }
+
   50% {
     background-position: 100% 50%;
   }
+
   100% {
     background-position: 0% 50%;
   }
 }
+
 /**
  * Structure
  */
-.jail {
+.container {
   position: relative;
   margin-left: auto;
   margin-right: auto;
-  width: 90%;
-  max-width: 63rem;
+  max-width: 60rem;
   padding: 2rem;
 }
+
 @media (min-width: 800px) {
-  .jail {
+  .container {
+    padding: 2.5rem;
+  }
+}
+
+@media (min-width: 1000px) {
+  .container {
     padding: 3rem;
   }
 }
-@media (min-width: 1000px) {
-  .jail {
+
+@media (min-width: 1200px) {
+  .container {
     padding: 4rem;
   }
 }
-@media (min-width: 1200px) {
-  .jail {
-    padding-top: 5rem;
-    padding-bottom: 5rem;
+
+@media (min-width: 1400px) {
+  .container {
+    padding: 5rem;
   }
 }
-.jail-big {
+
+.container-big {
   max-width: 74rem;
 }
 
@@ -176,26 +210,31 @@ sup {
   padding-top: 0.75rem;
   padding-bottom: 0.75rem;
 }
+
 @media (min-width: 1000px) {
   .px {
     padding-top: 1rem;
     padding-bottom: 1rem;
   }
 }
+
 .px-2 {
   padding-top: 1.25rem;
   padding-bottom: 1.25rem;
 }
+
 @media (min-width: 1000px) {
   .px-2 {
     padding-top: 2rem;
     padding-bottom: 2rem;
   }
 }
+
 .px-3 {
   padding-top: 2rem;
   padding-bottom: 2rem;
 }
+
 @media (min-width: 1000px) {
   .px-3 {
     padding-top: 3rem;
@@ -212,49 +251,58 @@ sup {
   top: 0;
   left: 0;
 }
+
 .lines-mask svg {
   position: relative;
-  top: 0;
-  left: 0;
-  right: 0;
 }
+
 .lines-mask svg path {
   transform-origin: 50% 50%;
 }
+
 .lines-mask .p1 {
   -webkit-animation: spin infinite 120s linear;
-          animation: spin infinite 120s linear;
+  animation: spin infinite 120s linear;
 }
+
 .lines-mask .p2 {
   -webkit-animation: spin infinite 220s linear;
-          animation: spin infinite 220s linear;
+  animation: spin infinite 220s linear;
 }
+
 .lines-mask .p3 {
   -webkit-animation: spin infinite 80s linear;
-          animation: spin infinite 80s linear;
+  animation: spin infinite 80s linear;
 }
+
 .lines-mask .p4 {
   animation: spin infinite 80s linear reverse;
 }
+
 .dark .lines-mask.first-right path:not(.p3) {
   stroke: var(--lightgrey);
 }
+
 @media (prefers-color-scheme: dark) {
   .lines-mask.first-right path:not(.p3) {
     stroke: var(--lightgrey);
   }
 }
+
 .lines-mask.first-left {
   top: 50vh;
 }
+
 .dark .lines-mask.first-left path:not(.p2) {
   stroke: var(--lightgrey);
 }
+
 @media (prefers-color-scheme: dark) {
   .lines-mask.first-left path:not(.p2) {
     stroke: var(--lightgrey);
   }
 }
+
 .lines-mask.bottom {
   top: auto;
   bottom: 0;
@@ -262,70 +310,36 @@ sup {
   transform: translateX(-50%);
   max-width: 100%;
 }
+
+@media (min-width: 800px) {
+  .lines-mask.bottom {
+    bottom: -3rem;
+  }
+}
+
+@media (min-width: 1000px) {
+  .lines-mask.bottom {
+    bottom: -4rem;
+  }
+}
+
+@media (min-width: 1200px) {
+  .lines-mask.bottom {
+    bottom: -5rem;
+  }
+}
+
 .dark .lines-mask.bottom path:not(.p2) {
   stroke: var(--lightgrey);
 }
+
 @media (prefers-color-scheme: dark) {
   .lines-mask.bottom path:not(.p2) {
     stroke: var(--lightgrey);
   }
 }
-.bg {
-  position: absolute;
-  top: 0;
-  left: 0;
-  bottom: 0;
-  right: 0;
-  z-index: -1;
-  opacity: 0.9;
-  transition: all 0.3s ease;
-  border-radius: 8px;
-}
-@media (min-width: 1200px) {
-  .bg {
-    position: absolute;
-    top: -1rem;
-    left: -1rem;
-    right: -1rem;
-    bottom: -1rem;
-  }
-}
-.bg-lightgrey {
-  background: var(--lightgrey);
-}
-@media (min-width: 1200px) {
-  .bg-lightgrey {
-    transform: rotate(3deg);
-  }
-}
-.bg-blue {
-  z-index: -2;
-  background: var(--blue);
-}
-@media (min-width: 1200px) {
-  .bg-blue {
-    transform: rotate(-3deg);
-  }
-}
-.bg-yellow {
-  background: var(--yellow);
-}
-@media (min-width: 1200px) {
-  .bg-yellow {
-    transform: rotate(3deg);
-  }
-}
-.bg-purple {
-  z-index: -2;
-  background: var(--purple);
-}
-@media (min-width: 1200px) {
-  .bg-purple {
-    transform: rotate(-3deg);
-  }
-}
 
-.cl-purple {
+.cl--purple {
   color: var(--purple);
 }
 
@@ -342,29 +356,35 @@ sup {
   line-height: 1;
   text-align: center;
 }
+
 .dark .darkmode-toggle {
   border-color: var(--grey);
 }
+
 @media (prefers-color-scheme: dark) {
   .darkmode-toggle {
     border-color: var(--grey);
   }
 }
+
 .darkmode-toggle:active {
   border-color: var(--lightgrey);
 }
 
+/**
+ * SECTIONS
+ */
 .section {
   position: relative;
-  margin-top: 2.5rem;
-  margin-bottom: 2.5rem;
 }
+
 @media (min-width: 800px) {
   .section {
     margin-top: 3rem;
     margin-bottom: 3rem;
   }
 }
+
 @media (min-width: 1000px) {
   .section {
     margin-top: 4rem;
@@ -372,17 +392,135 @@ sup {
   }
 }
 
-/**
- * SECTIONS
- */
+@media (min-width: 1200px) {
+  .section {
+    margin-top: 5rem;
+    margin-bottom: 5rem;
+  }
+}
+
+.section__bg {
+  position: absolute;
+  top: 0.5rem;
+  left: 0.5rem;
+  bottom: 0.5rem;
+  right: 0.5rem;
+  z-index: -1;
+  opacity: 0.7;
+  transition: all 0.3s ease;
+  border-radius: var(--border-radius);
+}
+
+@media (min-width: 800px) {
+  .section__bg {
+    top: -2rem;
+    bottom: -2rem;
+  }
+}
+
+@media (min-width: 1400px) {
+  .section__bg {
+    top: -3rem;
+    bottom: -3rem;
+  }
+}
+
+.section__bg--lightgrey {
+  background: linear-gradient(-45deg, var(--purple), var(--lightgrey));
+  -webkit-animation: gradient 25s linear infinite;
+  animation: gradient 25s linear infinite;
+  background-size: 300% 300%;
+  transform: rotate(2deg);
+}
+
+@media (min-width: 800px) {
+  .section__bg--lightgrey {
+    transform: rotate(3deg);
+  }
+}
+
+.section__bg--blue {
+  z-index: -2;
+  background: linear-gradient(-45deg, var(--purple), var(--blue));
+  -webkit-animation: gradient 25s linear infinite;
+  animation: gradient 25s linear infinite;
+  background-size: 300% 300%;
+  transform: rotate(-2deg);
+}
+
+@media (min-width: 800px) {
+  .section__bg--blue {
+    transform: rotate(-3deg);
+  }
+}
+
+.section__bg--yellow {
+  background: linear-gradient(-45deg, var(--yellow), var(--red));
+  -webkit-animation: gradient 25s linear infinite;
+  animation: gradient 25s linear infinite;
+  background-size: 300% 300%;
+  transform: rotate(2deg);
+}
+
+@media (min-width: 800px) {
+  .section__bg--yellow {
+    transform: rotate(3deg);
+  }
+}
+
+.section__bg--purple {
+  z-index: -2;
+  background: linear-gradient(-45deg, var(--purple), var(--red));
+  -webkit-animation: gradient 25s linear infinite;
+  animation: gradient 25s linear infinite;
+  background-size: 300% 300%;
+  transform: rotate(-2deg);
+}
+
+@media (min-width: 800px) {
+  .section__bg--purple {
+    transform: rotate(-3deg);
+  }
+}
+
+.section__text {
+  position: relative;
+  z-index: 1;
+}
+
+.section__text p {
+  font-size: var(--fs);
+}
+
+@media (min-width: 800px) {
+  .section__text p {
+    font-size: var(--fs-lead);
+  }
+}
+
+.section__subline {
+  font-weight: bold;
+  font-size: var(--fs-lead);
+  text-align: center;
+}
+
+.section__label {
+  display: block;
+  font-weight: bold;
+  padding: 1rem 0;
+  color: var(--black);
+}
+
 .header {
   position: relative;
   padding: 20vh 0 5vh;
 }
+
 .header .header-text {
   position: relative;
   z-index: 1;
 }
+
 .header .headline {
   display: inline-block;
   background: linear-gradient(-45deg, var(--purple), var(--red), var(--yellow));
@@ -395,95 +533,97 @@ sup {
   font-weight: bold;
   font-style: italic;
   -webkit-animation: gradient 5s ease infinite;
-          animation: gradient 5s ease infinite;
+  animation: gradient 5s ease infinite;
 }
+
 @media (min-width: 800px) {
   .header .headline {
     font-size: 6rem;
   }
 }
+
 .header p {
-  font-size: 1.375rem;
+  font-size: var(--fs-lead);
   color: var(--black-50);
 }
+
 body.dark .header p {
   color: var(--grey);
 }
+
 @media (prefers-color-scheme: dark) {
   .header p {
     color: var(--grey);
   }
 }
+
 @media (min-width: 800px) {
   .header p {
-    font-size: 2.25rem;
+    font-size: var(--fs-hero);
   }
 }
+
 .header p strong {
   color: var(--black);
 }
+
 body.dark .header p strong {
   color: var(--lightgrey);
 }
+
 @media (prefers-color-scheme: dark) {
   .header p strong {
     color: var(--lightgrey);
   }
 }
+
 .header p a {
   border-color: var(--yellow);
 }
+
 .header p a:hover {
   border-color: var(--red);
 }
+
 .header nav {
   font-size: 1rem;
 }
+
 .header nav p {
   font-size: inherit;
 }
+
 .header nav li {
   display: inline-block;
   margin-right: 1rem;
   color: var(--black);
 }
+
 body.dark .header nav li {
   color: var(--lightgrey);
 }
+
 @media (prefers-color-scheme: dark) {
   .header nav li {
     color: var(--lightgrey);
   }
 }
+
 .header nav a {
   font-weight: bold;
-}
-
-.section-text {
-  position: relative;
-  z-index: 1;
-}
-.section-text h2 {
-  font-size: 1.375rem;
-}
-.section-text p {
-  font-size: 1rem;
-}
-@media (min-width: 800px) {
-  .section-text p {
-    font-size: 1.375rem;
-  }
 }
 
 .hashtags {
   margin: 2rem 0;
   color: var(--black-50);
 }
+
 .hashtags li {
   display: inline-block;
   font-style: italic;
   margin-right: 0.5rem;
 }
+
 .hashtags li::before {
   content: "#";
 }
@@ -492,37 +632,60 @@ dl {
   display: block;
   margin: 1rem 0;
 }
+
 dl dt {
-  display: inline-block;
-  width: 15%;
-  text-align: right;
+  display: block;
   color: var(--black-50);
   font-style: italic;
 }
+
+@media (min-width: 600px) {
+  dl dt {
+    display: inline-block;
+    width: 30%;
+    text-align: right;
+  }
+}
+
 dl dd {
-  display: inline-block;
-  width: 70%;
-  margin-left: 5%;
+  display: block;
   margin-bottom: 1rem;
 }
 
-.section-label {
-  display: block;
-  font-weight: bold;
-  padding: 1rem 0;
-  color: var(--black);
+@media (min-width: 600px) {
+  dl dd {
+    display: inline-block;
+    width: 60%;
+    margin-left: 5%;
+  }
 }
 
 .social-links {
   display: block;
   margin: 2rem 0 0;
 }
+
 .social-links li {
   display: inline-block;
-  margin-right: 1rem;
+  margin-right: 0.5rem;
 }
+
+@media (min-width: 800px) {
+  .social-links li {
+    margin-right: 1rem;
+  }
+}
+
+.social-links li a {
+  display: block;
+  vertical-align: middle;
+  font-weight: bold;
+}
+
 .social-links li img {
-  vertical-align: top;
+  width: 21px;
+  height: 21px;
+  vertical-align: middle;
 }
 
 .footer {
