--- a/assets/scss/main.scss
+++ b/assets/scss/main.scss
@@ -1,96 +1,101 @@
 :root {
-    --yellow: #FAD722;
-    --blue: rgba(89,195, 255, 1);
-    --purple: #9759EE;
-    --red: #EE5959;
-    --white: #FFF;
-    --lightgrey: #EBEBEB;
-    --grey: #AFAFAF;
-    --black: #3A3A3A;
-    --black-50: rgba(58, 58, 58, .5);
+  --yellow: #FAD722;
+  --blue: rgba(89, 195, 255, 1);
+  --purple: #9759EE;
+  --red: #EE5959;
+  --white: #FFF;
+  --lightgrey: #EBEBEB;
+  --grey: #AFAFAF;
+  --black: #3A3A3A;
+  --black-50: rgba(58, 58, 58, .5);
+
+  --border-width: 2px;
+  --border-radius: 8px;
+
+  --fs-hero: 2.25rem;
+  --fs-lead: 1.375rem;
+  --fs: 1rem;
+  --fs-tiny: 0.875rem;
 }
-
-$border-width: 2px;
-$border-radius: 8px;
-
-$fs-hero: 2.25rem;
-$fs-lead: 1.375rem;
-$fs: 1rem;
-$fs-tiny: 0.875rem;
 
 
 /**
  * BASE
  */
-
 *,
 *:before,
 *:after {
-    box-sizing: border-box;
-    margin: 0;
-    padding: 0;
+  box-sizing: border-box;
+  margin: 0;
+  padding: 0;
 }
 
 html {
-    scroll-behavior: smooth;
-    font-size: 16px;
-    overflow: hidden;
-    overflow-y: auto;
+  scroll-behavior: smooth;
+  font-size: 16px;
+  overflow: hidden;
+  overflow-y: auto;
 
-    @media (min-width: 500px){
-        font-size: 17px;
-    }
-    @media (min-width: 700px){
-        font-size: 18px;
-    }
-    @media (min-width: 800px){
-        font-size: 19px;
-    }
-    @media (min-width: 1000px){
-        font-size: 20px;
-    }
-    @media (min-width: 1200px){
-        font-size: 21px;
-    }
+  @media (min-width: 500px) {
+    font-size: 17px;
+  }
+
+  @media (min-width: 700px) {
+    font-size: 18px;
+  }
+
+  @media (min-width: 800px) {
+    font-size: 19px;
+  }
+
+  @media (min-width: 1000px) {
+    font-size: 20px;
+  }
+
+  @media (min-width: 1200px) {
+    font-size: 21px;
+  }
 }
 
 body {
-    margin: 0 auto;
-    line-height: 1.5;
-    font-family: Inter, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
-    color: var(--black);
+  margin: 0 auto;
+  line-height: 1.5;
+  font-family: Inter, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
+  color: var(--black);
 
-    &.dark {
-        background: #111;
-    }
-    @media (prefers-color-scheme: dark) {
-        background: #111;
-    }
+  &.dark {
+    background: #111;
+  }
+
+  @media (prefers-color-scheme: dark) {
+    background: #111;
+  }
 }
 
 a {
-    text-decoration: none;
-    color: inherit;
-    border-bottom: 3px solid;
-    border-color: transparent;
-    transition: 0.1s ease;
+  text-decoration: none;
+  color: inherit;
+  border-bottom: 3px solid;
+  border-color: transparent;
+  transition: 0.1s ease;
 
-    &:hover,
-    &:focus {
-        border-color: var(--yellow);
-        outline: none;
-    }
-    &:active {
-        border-color: var(--blue);
-    }
+  &:hover,
+  &:focus {
+    border-color: var(--yellow);
+    outline: none;
+  }
+
+  &:active {
+    border-color: var(--blue);
+  }
 }
 
 strong {
-    font-weight: bold;
+  font-weight: bold;
 }
 
 em {
-    font-style: italic;
+  font-style: italic;
 }
 
 sup {
@@ -99,7 +104,7 @@ sup {
 }
 
 .no-br {
-    white-space: nowrap;
+  white-space: nowrap;
 }
 
 
@@ -108,24 +113,27 @@ sup {
  */
 
 @keyframes spin {
-    from {
-        transform: rotate(0deg);
-    }
-    to {
-        transform: rotate(360deg);
-    }
+  from {
+    transform: rotate(0deg);
+  }
+
+  to {
+    transform: rotate(360deg);
+  }
 }
 
 @keyframes gradient {
-	0% {
-		background-position: 0% 50%;
-	}
-	50% {
-		background-position: 100% 50%;
-	}
-	100% {
-		background-position: 0% 50%;
-	}
+  0% {
+    background-position: 0% 50%;
+  }
+
+  50% {
+    background-position: 100% 50%;
+  }
+
+  100% {
+    background-position: 0% 50%;
+  }
 }
 
 
@@ -133,241 +141,194 @@ sup {
  * Structure
  */
 
-.jail {
-    position: relative;
-    margin-left: auto;
-    margin-right: auto;
-    width: 90%;
-    max-width: 63rem;
-    padding: 2rem;
+.container {
+  position: relative;
+  margin-left: auto;
+  margin-right: auto;
+  max-width: 60rem;
+  padding: 2rem;
 
-    @media (min-width: 800px) {
-        padding: 3rem;
-    }
-    @media (min-width: 1000px) {
-        padding: 4rem;
-    }
-    @media (min-width: 1200px) {
-        padding-top: 5rem;
-        padding-bottom: 5rem;
-    }
+  @media (min-width: 800px) {
+    padding: 2.5rem;
+  }
 
-    &-big {
-        max-width: 74rem;
-    }
+  @media (min-width: 1000px) {
+    padding: 3rem;
+  }
+
+  @media (min-width: 1200px) {
+    padding: 4rem;
+  }
+
+  @media (min-width: 1400px) {
+    padding: 5rem;
+  }
+
+  &-big {
+    max-width: 74rem;
+  }
 }
 
 .px {
-    padding-top: 0.75rem;
-    padding-bottom: 0.75rem;
+  padding-top: 0.75rem;
+  padding-bottom: 0.75rem;
+
+  @media (min-width: 1000px) {
+    padding-top: 1rem;
+    padding-bottom: 1rem;
+  }
+
+  &-2 {
+    padding-top: 1.25rem;
+    padding-bottom: 1.25rem;
 
     @media (min-width: 1000px) {
-        padding-top: 1rem;
-        padding-bottom: 1rem;
+      padding-top: 2rem;
+      padding-bottom: 2rem;
     }
+  }
 
-    &-2 {
-        padding-top: 1.25rem;
-        padding-bottom: 1.25rem;
+  &-3 {
+    padding-top: 2rem;
+    padding-bottom: 2rem;
 
-        @media (min-width: 1000px) {
-            padding-top: 2rem;
-            padding-bottom: 2rem;
-        }
+    @media (min-width: 1000px) {
+      padding-top: 3rem;
+      padding-bottom: 3rem;
     }
-
-    &-3 {
-        padding-top: 2rem;
-        padding-bottom: 2rem;
-
-        @media (min-width: 1000px) {
-            padding-top: 3rem;
-            padding-bottom: 3rem;
-        }
-    }
+  }
 }
 
 .lines-mask {
-    position: absolute;
-    z-index: 0;
-    pointer-events: none;
-    overflow: hidden;
-    width: 100%;
-    top: 0;
-    left: 0;
+  position: absolute;
+  z-index: 0;
+  pointer-events: none;
+  overflow: hidden;
+  width: 100%;
+  top: 0;
+  left: 0;
 
-    svg {
-        position: relative;
-        top: 0;
-        left: 0;
-        right: 0;
+  svg {
+    position: relative;
 
-        path {
-            transform-origin: 50% 50%;
+    path {
+      transform-origin: 50% 50%;
+    }
+  }
+
+  .p1 {
+    animation: spin infinite 120s linear;
+  }
+
+  .p2 {
+    animation: spin infinite 220s linear;
+  }
+
+  .p3 {
+    animation: spin infinite 80s linear;
+  }
+
+  .p4 {
+    animation: spin infinite 80s linear reverse;
+  }
+
+  &.first-right {
+    path {
+      .dark &:not(.p3) {
+        stroke: var(--lightgrey);
+      }
+
+      @media (prefers-color-scheme: dark) {
+        &:not(.p3) {
+          stroke: var(--lightgrey);
         }
+      }
     }
+  }
 
-    .p1 {
-        animation: spin infinite 120s linear;
-    }
-    .p2 {
-        animation: spin infinite 220s linear;
-    }
-    .p3 {
-        animation: spin infinite 80s linear;
-    }
-    .p4 {
-        animation: spin infinite 80s linear reverse;
-    }
+  &.first-left {
+    top: 50vh;
 
-    &.first-right {
-        path {
-            .dark &:not(.p3) {
-                stroke: var(--lightgrey);
-            }
-            @media (prefers-color-scheme: dark) {
-                &:not(.p3){
-                    stroke: var(--lightgrey);
-                }
-            }
+    path {
+      .dark &:not(.p2) {
+        stroke: var(--lightgrey);
+      }
+
+      @media (prefers-color-scheme: dark) {
+        &:not(.p2) {
+          stroke: var(--lightgrey);
         }
+      }
     }
+  }
 
-    &.first-left {
-        top: 50vh;
-
-        path {
-            .dark &:not(.p2) {
-                stroke: var(--lightgrey);
-            }
-            @media (prefers-color-scheme: dark) {
-                &:not(.p2){
-                    stroke: var(--lightgrey);
-                }
-            }
-        }
-    }
-
-    &.bottom {
-        top: auto;
-        bottom: 0;
-        left: 50%;
-        transform: translateX(-50%);
-        max-width: 100%;
-
-        path {
-            .dark &:not(.p2) {
-                stroke: var(--lightgrey);
-            }
-            @media (prefers-color-scheme: dark) {
-                &:not(.p2){
-                    stroke: var(--lightgrey);
-                }
-            }
-        }
-
-        @media (prefers-reduced-motion) {
-            // Motion is already very slow
-        }
-    }
-}
-
-.bg {
-    position: absolute;
-    top: 0;
-    left: 0;
+  &.bottom {
+    top: auto;
     bottom: 0;
-    right: 0;
-    z-index: -1;
-    opacity: .9;
-    transition: all .3s ease;
-    border-radius: $border-radius;
+    left: 50%;
+    transform: translateX(-50%);
+    max-width: 100%;
 
-    @media (min-width: 1200px) {
-        position: absolute;
-        top: -1rem;
-        left: -1rem;
-        right: -1rem;
-        bottom: -1rem;
+    @media (min-width:800px) {
+      bottom: -3rem;
     }
 
-    &-lightgrey {
-        background: var(--lightgrey);
+    @media (min-width:1000px) {
+      bottom: -4rem;
+    }
 
-        @media (min-width: 1200px) {
-            transform: rotate(3deg);
+    @media (min-width:1200px) {
+      bottom: -5rem;
+    }
+
+    path {
+      .dark &:not(.p2) {
+        stroke: var(--lightgrey);
+      }
+
+      @media (prefers-color-scheme: dark) {
+        &:not(.p2) {
+          stroke: var(--lightgrey);
         }
+      }
     }
 
-    &-blue {
-        z-index: -2;
-        background: var(--blue);
-        @media (min-width: 1200px) {
-            transform: rotate(-3deg);
-        }
+    @media (prefers-reduced-motion) {
+      // Motion is already very slow
     }
-
-    &-yellow {
-        background: var(--yellow);
-        @media (min-width: 1200px) {
-            transform: rotate(3deg);
-        }
-    }
-
-    &-purple {
-        z-index: -2;
-        background: var(--purple);
-        @media (min-width: 1200px) {
-            transform: rotate(-3deg);
-        }
-    }
+  }
 }
 
 .cl {
-    &-purple {
-        color: var(--purple);
-    }
+  &--purple {
+    color: var(--purple);
+  }
 }
 
 .darkmode-toggle {
-    position: fixed;
-    top: 0.25rem;
-    left: 0.25rem;
-    z-index: 1;
-    border-bottom: none;
-    border-radius: 50%;
-    border: 2px solid var(--lightgrey);
-    padding: .5em;
-    font-size: 0.875rem;
-    line-height: 1;
-    text-align: center;
+  position: fixed;
+  top: 0.25rem;
+  left: 0.25rem;
+  z-index: 1;
+  border-bottom: none;
+  border-radius: 50%;
+  border: 2px solid var(--lightgrey);
+  padding: .5em;
+  font-size: 0.875rem;
+  line-height: 1;
+  text-align: center;
 
-    .dark & {
-        border-color: var(--grey);
-    }
-    @media (prefers-color-scheme: dark) {
-        border-color: var(--grey);
-    }
+  .dark & {
+    border-color: var(--grey);
+  }
 
-    &:active {
-        border-color: var(--lightgrey);
-    }
-}
+  @media (prefers-color-scheme: dark) {
+    border-color: var(--grey);
+  }
 
-.section {
-    position: relative;
-    margin-top: 2.5rem;
-    margin-bottom: 2.5rem;
-
-    @media (min-width: 800px) {
-        margin-top: 3rem;
-        margin-bottom: 3rem;
-    }
-
-    @media (min-width: 1000px) {
-        margin-top: 4rem;
-        margin-bottom: 4rem;
-    }
+  &:active {
+    border-color: var(--lightgrey);
+  }
 }
 
 
@@ -375,168 +336,287 @@ sup {
  * SECTIONS
  */
 
-.header {
-    position: relative;
-    padding: 20vh 0 5vh;
+.section {
+  position: relative;
 
-    .header-text {
-        position: relative;
-        z-index: 1;
-    }
 
-    .headline {
-        display: inline-block;
-        background: linear-gradient(-45deg, var(--purple), var(--red), var(--yellow));
-        background-size: 400% 400%;
-        -webkit-background-clip: text;
-        -webkit-text-fill-color: transparent;
-        background-clip: text;
-        text-fill-color: transparent;
-        font-size: 4rem;
-        font-weight: bold;
-        font-style: italic;
-        animation: gradient 5s ease infinite;
+  @media (min-width: 800px) {
+    margin-top: 3rem;
+    margin-bottom: 3rem;
+  }
 
-        @media (min-width: 800px) {
-            font-size: 6rem;
-        }
-    }
+  @media (min-width: 1000px) {
+    margin-top: 4rem;
+    margin-bottom: 4rem;
+  }
 
-    p {
-        font-size: $fs-lead;
-        color: var(--black-50);
-
-        body.dark & {
-            color: var(--grey);
-        }
-        @media (prefers-color-scheme: dark) {
-            color: var(--grey);
-        }
-
-        @media (min-width: 800px) {
-            font-size: $fs-hero;
-        }
-
-        strong {
-            color: var(--black);
-
-            body.dark & {
-                color: var(--lightgrey);
-            }
-            @media (prefers-color-scheme: dark) {
-                color: var(--lightgrey);
-            }
-        }
-
-        a {
-            border-color: var(--yellow);
-
-            &:hover {
-                border-color: var(--red);
-            }
-        }
-    }
-
-    nav {
-        font-size: 1rem;
-
-        p {
-            font-size: inherit;
-        }
-
-        li {
-            display: inline-block;
-            margin-right: 1rem;
-            color: var(--black);
-
-            body.dark & {
-                color: var(--lightgrey);
-            }
-            @media (prefers-color-scheme: dark) {
-                color: var(--lightgrey);
-            }
-        }
-
-        a {
-            font-weight: bold;
-        }
-    }
+  @media (min-width: 1200px) {
+    margin-top: 5rem;
+    margin-bottom: 5rem;
+  }
 }
 
-.section-text {
+.section__bg {
+  position: absolute;
+  top: .5rem;
+  left: .5rem;
+  bottom: .5rem;
+  right: .5rem;
+  z-index: -1;
+  opacity: .7;
+  transition: all .3s ease;
+  border-radius: var(--border-radius);
+
+
+  @media (min-width: 800px) {
+    top: -2rem;
+    bottom: -2rem;
+  }
+
+  @media (min-width: 1400px) {
+    top: -3rem;
+    bottom: -3rem;
+  }
+
+  &--lightgrey {
+    background: linear-gradient(-45deg, var(--purple), var(--lightgrey));
+    animation: gradient 25s linear infinite;
+    background-size: 300% 300%;
+    transform: rotate(2deg);
+
+    @media (min-width: 800px) {
+      transform: rotate(3deg);
+    }
+  }
+
+  &--blue {
+    z-index: -2;
+    background: linear-gradient(-45deg, var(--purple), var(--blue));
+    animation: gradient 25s linear infinite;
+    background-size: 300% 300%;
+    transform: rotate(-2deg);
+
+    @media (min-width: 800px) {
+      transform: rotate(-3deg);
+    }
+  }
+
+  &--yellow {
+    background: linear-gradient(-45deg, var(--yellow), var(--red));
+    animation: gradient 25s linear infinite;
+    background-size: 300% 300%;
+    transform: rotate(2deg);
+
+    @media (min-width: 800px) {
+      transform: rotate(3deg);
+    }
+  }
+
+  &--purple {
+    z-index: -2;
+    background: linear-gradient(-45deg, var(--purple), var(--red));
+    animation: gradient 25s linear infinite;
+    background-size: 300% 300%;
+    transform: rotate(-2deg);
+
+    @media (min-width: 800px) {
+      transform: rotate(-3deg);
+    }
+  }
+}
+
+.section__text {
+  position: relative;
+  z-index: 1;
+
+  p {
+    font-size: var(--fs);
+
+    @media (min-width: 800px) {
+      font-size: var(--fs-lead);
+    }
+  }
+}
+
+.section__subline {
+  font-weight: bold;
+  font-size: var(--fs-lead);
+  text-align: center;
+}
+
+.section__label {
+  display: block;
+  font-weight: bold;
+  padding: 1rem 0;
+  color: var(--black);
+}
+
+.header {
+  position: relative;
+  padding: 20vh 0 5vh;
+
+  .header-text {
     position: relative;
     z-index: 1;
+  }
 
-    h2 {
-        font-size: $fs-lead;
+  .headline {
+    display: inline-block;
+    background: linear-gradient(-45deg, var(--purple), var(--red), var(--yellow));
+    background-size: 400% 400%;
+    -webkit-background-clip: text;
+    -webkit-text-fill-color: transparent;
+    background-clip: text;
+    text-fill-color: transparent;
+    font-size: 4rem;
+    font-weight: bold;
+    font-style: italic;
+    animation: gradient 5s ease infinite;
+
+    @media (min-width: 800px) {
+      font-size: 6rem;
     }
-    p {
-        font-size: $fs;
+  }
 
-        @media (min-width: 800px) {
-            font-size: $fs-lead;
-        }
-    }
-}
-
-.hashtags {
-    margin: 2rem 0;
+  p {
+    font-size: var(--fs-lead);
     color: var(--black-50);
 
-    li {
-        display: inline-block;
-        font-style: italic;
-        margin-right: 0.5rem;
-
-        &::before {
-            content: "#";
-        }
+    body.dark & {
+      color: var(--grey);
     }
+
+    @media (prefers-color-scheme: dark) {
+      color: var(--grey);
+    }
+
+    @media (min-width: 800px) {
+      font-size: var(--fs-hero);
+    }
+
+    strong {
+      color: var(--black);
+
+      body.dark & {
+        color: var(--lightgrey);
+      }
+
+      @media (prefers-color-scheme: dark) {
+        color: var(--lightgrey);
+      }
+    }
+
+    a {
+      border-color: var(--yellow);
+
+      &:hover {
+        border-color: var(--red);
+      }
+    }
+  }
+
+  nav {
+    font-size: 1rem;
+
+    p {
+      font-size: inherit;
+    }
+
+    li {
+      display: inline-block;
+      margin-right: 1rem;
+      color: var(--black);
+
+      body.dark & {
+        color: var(--lightgrey);
+      }
+
+      @media (prefers-color-scheme: dark) {
+        color: var(--lightgrey);
+      }
+    }
+
+    a {
+      font-weight: bold;
+    }
+  }
+}
+
+
+
+.hashtags {
+  margin: 2rem 0;
+  color: var(--black-50);
+
+  li {
+    display: inline-block;
+    font-style: italic;
+    margin-right: 0.5rem;
+
+    &::before {
+      content: "#";
+    }
+  }
 }
 
 dl {
-    display: block;
-    margin: 1rem 0;
+  display: block;
+  margin: 1rem 0;
 
-    dt {
-        display: inline-block;
-        width: 15%;
-        text-align: right;
-        color: var(--black-50);
-        font-style: italic;
+  dt {
+    display: block;
+    color: var(--black-50);
+    font-style: italic;
+
+    @media (min-width: 600px) {
+      display: inline-block;
+      width: 30%;
+      text-align: right;
     }
-    dd {
-        display: inline-block;
-        width: 70%;
-        margin-left: 5%;
-        margin-bottom: 1rem;
+  }
+
+  dd {
+    display: block;
+    margin-bottom: 1rem;
+
+    @media (min-width: 600px) {
+      display: inline-block;
+      width: 60%;
+      margin-left: 5%;
     }
+  }
 }
 
-.section-label {
-    display: block;
-    font-weight: bold;
-    padding: 1rem 0;
-    color: var(--black);
-}
 
 .social-links {
-    display: block;
-    margin: 2rem 0 0;
+  display: block;
+  margin: 2rem 0 0;
 
-    li {
-        display: inline-block;
-        margin-right: 1rem;
+  li {
+    display: inline-block;
+    margin-right: .5rem;
 
-        img {
-            vertical-align: top;
-        }
+    @media (min-width: 800px) {
+      margin-right: 1rem;
     }
+
+    a {
+      display: block;
+      vertical-align: middle;
+      font-weight: bold;
+    }
+
+    img {
+      width: 21px;
+      height: 21px;
+      vertical-align: middle;
+    }
+  }
 }
 
 .footer {
-    position: relative;
-    text-align: center;
-    margin-bottom: 0;
-    color: var(--white);
+  position: relative;
+  text-align: center;
+  margin-bottom: 0;
+  color: var(--white);
 }
